<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:contentDescription="Logo_image"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/primary_color"
        app:boxStrokeErrorColor="@color/secondary_color"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="emailAddress"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_et"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        app:boxStrokeColor="@color/primary_color"
        app:boxStrokeErrorColor="@color/secondary_color"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/secondary_color"
        app:hintTextColor="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input_et"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/secondary_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/email_login_btn"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/secondary_color"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/password_input_et"
        app:layout_constraintStart_toStartOf="@+id/password_input_et"
        app:layout_constraintTop_toBottomOf="@id/password_input_et"
        app:strokeColor="@color/primary_color"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/forget_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/forget_password"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/password_input_et"
        app:layout_constraintTop_toBottomOf="@id/email_login_btn" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="@id/password_input_et"
        app:layout_constraintStart_toStartOf="@id/password_input_et"
        app:layout_constraintTop_toBottomOf="@id/email_login_btn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/dont_have_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/password_input_et"
            app:layout_constraintTop_toBottomOf="@id/email_login_btn" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/password_input_et"
            app:layout_constraintTop_toBottomOf="@id/email_login_btn" />

    </LinearLayout>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/or"
        android:textColor="@color/secondary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guest_login_btn"
        app:layout_constraintEnd_toEndOf="@id/linear_layout"
        app:layout_constraintStart_toStartOf="@id/linear_layout"
        app:layout_constraintTop_toBottomOf="@id/linear_layout" />

    <Button
        android:id="@+id/guest_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary_color"
        android:drawableEnd="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/login_as_guest"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/google_login_btn"
        app:layout_constraintEnd_toEndOf="@id/google_login_btn"
        app:layout_constraintStart_toStartOf="@id/google_login_btn"
        app:strokeColor="@color/secondary_color"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/google_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/primary_color"
        android:drawableEnd="@drawable/ic_google"
        android:drawablePadding="10dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/secondary_color"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>