<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.View.HomeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/primary_color" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@color/secondary_color"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_search"
                    android:drawableLeft="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="Search Here"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/viewPagerHeader"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/cardSearch"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center"
                android:padding="18dp" />

            <include
                android:id="@+id/shimmerArea"
                layout="@layout/item_recycler_area_shimmer" />

            <TextView
                android:id="@+id/titleCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/viewPagerHeader"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:text="@string/meal_categories"
                android:textColor="@color/secondary_color"
                android:textSize="19sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleCategory"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="30dp"
                android:clipToPadding="false"
                android:scrollbars="none" />


            <include
                android:id="@+id/shimmerCategory"
                layout="@layout/item_recycler_category_shimmer" />

            <TextView
                android:id="@+id/meal_for_inspiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerCategory"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/meal_for_inspiration"
                android:textColor="@color/secondary_color"
                android:textSize="19sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:id="@+id/lay"
                android:layout_width="350dp"
                android:layout_height="320dp"
                android:layout_below="@id/recyclerCategory"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp">

                <link.fls.swipestack.SwipeStack
                    android:id="@+id/swipe_stack_view"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    app:stack_size="5" />
            </RelativeLayout>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>